# emacs

./: .gitignore  CMakeLists.txt
cmake/: configure.cmake
lwlib/: CMakeLists.txt
nt/: CMakeLists.txt
src/: CMakeLists.txt  buildobj.cmake  config.cmake  epaths.cmake  eval.c  fns.c
src/s/: ms-w32.h
